Removed AXi from tawas core in favor of a raccoon2axi converter. Raccoon is now the main bus for tawas, with converters required for any other type of bus.

--- a/sim/makefile
+++ b/sim/makefile
@@ -1,7 +1,7 @@
 
 TESTCASE ?= default
 
-DESIGN_VERILOG  = ../rtl/tawas_regfile.v ../rtl/tawas_ls.v ../rtl/tawas_axi.v ../rtl/tawas_raccoon.v
+DESIGN_VERILOG  = ../rtl/tawas_regfile.v ../rtl/tawas_ls.v ../rtl/tawas_raccoon.v
 DESIGN_VERILOG += ../rtl/tawas_au.v ../rtl/tawas_fetch.v ../rtl/tawas.v
 
 MAX_CLOCKS = 500
@@ -9,6 +9,7 @@ TESTBENCH_VERILOG = ../testbench/irom.v ../testbench/dram.v ../testbench/axi_ram
 TESTBENCH_VERILOG += ../testbench/spartan/rtl/axi2spartan.v ../testbench/spartan/rtl/spartan2ram.v 
 TESTBENCH_VERILOG += ../testbench/spartan/rtl/spartan_skid.v ../testbench/spartan/rtl/spartan_sync2.v
 TESTBENCH_VERILOG += ../testbench/raccoon/rtl/raccoon2ram.v ../testbench/raccoon/rtl/raccoon2ram_w.v 
+TESTBENCH_VERILOG += ../testbench/raccoon/rtl/raccoon2axi32.v ../testbench/raccoon/rtl/raccoon2axi64.v
 TESTBENCH_VERILOG += ../testbench/raccoon/rtl/raccoon_delay.v ../testbench/racc_subsys.v ../testbench/testbench.v
 TESTBENCH_DATA = ./irom.hex ./dram.hex
 
